--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -425,9 +425,17 @@ services:
         - ./data/web/inc/functions.auth.inc.php:/mailcowauth/functions.auth.inc.php:z
         - ./data/web/inc/sessions.inc.php:/mailcowauth/sessions.inc.php:z
         - sogo-web-vol-1:/usr/lib/GNUstep/SOGo/
-      ports:
-        - "${HTTPS_BIND:-}:${HTTPS_PORT:-443}:${HTTPS_PORT:-443}"
-        - "${HTTP_BIND:-}:${HTTP_PORT:-80}:${HTTP_PORT:-80}"
+      expose:
+        - "80"
+        - "443"
+    labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.mailcow.rule=Host(`mail.soulconsola.com`)"
+        - "traefik.http.routers.mailcow.entrypoints=web,websecure"
+        - "traefik.http.routers.mailcow.tls=true"
+        - "traefik.http.routers.mailcow.tls.certresolver=le"
+        - "traefik.http.services.mailcow.loadbalancer.server.port=80"
+
       restart: always
       networks:
         mailcow-network:
